--- a/scripts/w03-task.html
+++ b/scripts/w03-task.html
@@ -146,12 +146,11 @@
     <footer>
         &copy;<span id="year"></span> | CSE 121b | Task 03
     </footer>
-    <script src="/scripts/main.js"></script>
+    <script src="cse121b/scripts/main.js"></script>
     <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
     </script>
-    <script src="/scripts/w03-task.js"></script>
+    <script src="cse121b/scripts/w03-task.js"></script>
 </body>
 
 </html>
-
